# omni_ros2

./: frames_2023-06-10_23.33.16.gv
install/: local_setup.sh  setup.sh
install/omni_control/lib/omni_control/: omni_control_node
install/omni_control/share/omni_control/: package.bash  package.dsv  package.ps1  (+3 more)
install/robot_description/share/robot_description/: package.sh  package.xml
install/robot_description/share/robot_description/config/: omni_controller.yaml
install/robot_description/share/robot_description/launch/: gazebo.launch.py
install/robot_description/share/robot_description/meshes/: roller_1_3.stl  roller_1_4.stl  roller_1_5.stl  roller_2_5.stl  roller_3_4.stl  roller_3_5.stl  roller_3_6.stl  roller_3_7.stl  roller_4_2.stl  roller_4_3.stl  roller_4_4.stl  roller_4_6.stl  wheel_1.stl  wheel_2.stl  wheel_4.stl
install/robot_description/share/robot_description/urdf/: robot.gazebo  robot.trans
log/: latest_build  latest_list
src/omni_control/: package.xml  setup.py
src/omni_control/omni_control/: omni_drive_controller.py
src/robot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robot_description/config/: omni_controller.yaml
src/robot_description/launch/: gazebo.launch.py
src/robot_description/meshes/: base_link.stl  camera_1.stl  lidar_1.stl  roller_1_1.stl  roller_1_2.stl  roller_1_6.stl  roller_2_1.stl  roller_2_2.stl  roller_2_3.stl  roller_2_4.stl  roller_2_7.stl  roller_3_1.stl  roller_3_3.stl  roller_4_1.stl  roller_4_7.stl  wheel_3.stl
src/robot_description/urdf/: robot.gazebo  robot.trans  robot.xacro
